Fix mobile spacing and update default button text

--- a/link-builder-styles.css
+++ b/link-builder-styles.css
@@ -127,6 +127,9 @@
         flex-direction: column;
         padding: 15px;
     }
+    .af-image-wrapper, .af-info-wrapper {
+        flex: none;
+    }
     .af-image-wrapper {
         max-width: 100%;
         margin-bottom: 5px;
